// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`landing snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-center pb-10 pt-10 min-h-screen flex-col bg-neutral-50 items-center gap-y-20"
      >
        <h1
          class="text-6xl font-ver"
        >
          Notify
        </h1>
        <div>
          <div
            class="flex font-ver justify-center items-center flex-col gap-y-20 w-full "
          >
            <div
              class="flex justify-center items-center flex-col gap-y-16 "
            >
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Email
                </p>
                <input
                  aria-label="email"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="email"
                  role="textbox"
                  title="Email"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Password
                </p>
                <input
                  aria-label="password"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="password"
                  title="Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-y-5"
            >
              <button
                aria-label="process-user-button"
                class="w-[353px] h-[56px] pl-[10px] pr-[10px] rounded-[10px] font-ver bg-indigo-500 text-white text-base"
              >
                Log in
              </button>
              <div
                class="flex w-[353px]  items-center justify-end gap-x-3 "
              >
                <p>
                  Don't have an account?
                </p>
                <button
                  aria-label="registrationoption"
                  class="text-base text-indigo-500 font-ver"
                >
                  Sign up
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-center pb-10 pt-10 min-h-screen flex-col bg-neutral-50 items-center gap-y-20"
    >
      <h1
        class="text-6xl font-ver"
      >
        Notify
      </h1>
      <div>
        <div
          class="flex font-ver justify-center items-center flex-col gap-y-20 w-full "
        >
          <div
            class="flex justify-center items-center flex-col gap-y-16 "
          >
            <div
              class="relative"
            >
              <p
                class="absolute top-[-30px] text-[14px] "
              >
                Email
              </p>
              <input
                aria-label="email"
                class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                name="email"
                role="textbox"
                title="Email"
                type="text"
                value=""
              />
            </div>
            <div
              class="relative"
            >
              <p
                class="absolute top-[-30px] text-[14px] "
              >
                Password
              </p>
              <input
                aria-label="password"
                class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                name="password"
                title="Password"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="flex flex-col gap-y-5"
          >
            <button
              aria-label="process-user-button"
              class="w-[353px] h-[56px] pl-[10px] pr-[10px] rounded-[10px] font-ver bg-indigo-500 text-white text-base"
            >
              Log in
            </button>
            <div
              class="flex w-[353px]  items-center justify-end gap-x-3 "
            >
              <p>
                Don't have an account?
              </p>
              <button
                aria-label="registrationoption"
                class="text-base text-indigo-500 font-ver"
              >
                Sign up
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`landing snapshot 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-center pb-10 pt-10 min-h-screen flex-col bg-neutral-50 items-center gap-y-20"
      >
        <h1
          class="text-6xl font-ver"
        >
          Notify
        </h1>
        <div>
          <div
            class="flex font-ver justify-center items-center flex-col gap-y-20 w-full "
          >
            <div
              class="flex justify-center items-center flex-col gap-y-16 "
            >
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Email
                </p>
                <input
                  aria-label="email"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="email"
                  role="textbox"
                  title="Email"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Password
                </p>
                <input
                  aria-label="password"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="password"
                  title="Password"
                  type="password"
                  value=""
                />
              </div>
              <div
                class="relative flex flex-col gap-y-3"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Confirm Password
                </p>
                <input
                  aria-label="password-confirm"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border bg-slate-100"
                  disabled=""
                  name="confirmPassword"
                  title="Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-y-5"
            >
              <button
                aria-label="process-user-button"
                class="w-[353px] h-[56px] pl-[10px] pr-[10px] rounded-[10px] font-ver bg-indigo-500 text-white text-base"
              >
                Sign up
              </button>
              <div
                class="flex w-[353px]  items-center justify-end gap-x-3 "
              >
                <p>
                  Have an account?
                </p>
                <button
                  aria-label="registrationoption"
                  class="text-base text-indigo-500 font-ver"
                >
                  Log in
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="flex justify-center pb-10 pt-10 min-h-screen flex-col bg-neutral-50 items-center gap-y-20"
      >
        <h1
          class="text-6xl font-ver"
        >
          Notify
        </h1>
        <div>
          <div
            class="flex font-ver justify-center items-center flex-col gap-y-20 w-full "
          >
            <div
              class="flex justify-center items-center flex-col gap-y-16 "
            >
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Email
                </p>
                <input
                  aria-label="email"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="email"
                  role="textbox"
                  title="Email"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="relative"
              >
                <p
                  class="absolute top-[-30px] text-[14px] "
                >
                  Password
                </p>
                <input
                  aria-label="password"
                  class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                  name="password"
                  title="Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="flex flex-col gap-y-5"
            >
              <button
                aria-label="process-user-button"
                class="w-[353px] h-[56px] pl-[10px] pr-[10px] rounded-[10px] font-ver bg-indigo-500 text-white text-base"
              >
                Log in
              </button>
              <div
                class="flex w-[353px]  items-center justify-end gap-x-3 "
              >
                <p>
                  Don't have an account?
                </p>
                <button
                  aria-label="registrationoption"
                  class="text-base text-indigo-500 font-ver"
                >
                  Sign up
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-center pb-10 pt-10 min-h-screen flex-col bg-neutral-50 items-center gap-y-20"
    >
      <h1
        class="text-6xl font-ver"
      >
        Notify
      </h1>
      <div>
        <div
          class="flex font-ver justify-center items-center flex-col gap-y-20 w-full "
        >
          <div
            class="flex justify-center items-center flex-col gap-y-16 "
          >
            <div
              class="relative"
            >
              <p
                class="absolute top-[-30px] text-[14px] "
              >
                Email
              </p>
              <input
                aria-label="email"
                class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                name="email"
                role="textbox"
                title="Email"
                type="text"
                value=""
              />
            </div>
            <div
              class="relative"
            >
              <p
                class="absolute top-[-30px] text-[14px] "
              >
                Password
              </p>
              <input
                aria-label="password"
                class="w-[353px] pl-[10px] pr-[10px] rounded-[10px] h-[56px] border"
                name="password"
                title="Password"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="flex flex-col gap-y-5"
          >
            <button
              aria-label="process-user-button"
              class="w-[353px] h-[56px] pl-[10px] pr-[10px] rounded-[10px] font-ver bg-indigo-500 text-white text-base"
            >
              Log in
            </button>
            <div
              class="flex w-[353px]  items-center justify-end gap-x-3 "
            >
              <p>
                Don't have an account?
              </p>
              <button
                aria-label="registrationoption"
                class="text-base text-indigo-500 font-ver"
              >
                Sign up
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
